- Push to github

--- a/src/app/all-services/all-services.component.html
+++ b/src/app/all-services/all-services.component.html
@@ -1,5 +1,5 @@
 <header class="page-header"
-    data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+    data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>All Services</h2>
         <div class="bosluk3"></div>
@@ -27,7 +27,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.6s"
                                             (click)="navigateTo('corporate-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-1.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-1.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Corporate Events</h2>
@@ -45,7 +45,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.7s"
                                             (click)="navigateTo('branded-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-2.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-2.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Branded Events</h2>
@@ -63,7 +63,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.8s"
                                             (click)="navigateTo('commercial-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-3.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-3.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Commercial Events</h2>
@@ -80,13 +80,13 @@
                                 <div data-tab-title="Birthday Events" class="tab-content current wow fade">
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.9s"
-                                            onclick="window.location.href='https://garantiwebtasarim.com/wordpress/nightbird/birthday-events/'">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-4.jpg"
+                                            (click)="navigateTo('birthday-events')">
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-4.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Birthday Events</h2>
                                                 <button
-                                                    onclick="window.location.href='https://garantiwebtasarim.com/wordpress/nightbird/birthday-events/'">View</button>
+                                                    (click)="navigateTo('birthday-events')">View</button>
                                             </div>
                                         </div>
                                     </div>
@@ -99,7 +99,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="1s"
                                             (click)="navigateTo('vip-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-5.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-5.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>VIP Events</h2>
