--- a/src/app/branded-events/branded-events.component.html
+++ b/src/app/branded-events/branded-events.component.html
@@ -1,9 +1,9 @@
-<header class="page-header"
-    data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>Branded Events</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i><a
+                routerLink="/all-services" class="headerbreadcrumb">Services</a><i
                 class="flaticon-right-chevron"></i>Branded Events</p>
     </div>
     <!-- end container -->
@@ -18,29 +18,23 @@
             <div class="row">
                 <div class="col">
                     <div class="sidebar-service wow fadeInLeft" data-wow-delay="0.8s">
-                        <span class="menu-service "
-                            (click)="navigateTo('corporate-events')"><a
-                                routerLink="/corporate-events"><i
-                                    class="flaticon-right-chevron"></i>Corporate Events</a></span>
+                        <span class="menu-service " (click)="navigateTo('corporate-events')"><a
+                                routerLink="/corporate-events"><i class="flaticon-right-chevron"></i>Corporate
+                                Events</a></span>
 
-                        <span class="menu-service menuactive"
-                            (click)="navigateTo('branded-events')"><a
-                                routerLink="/branded-events"><i
-                                    class="flaticon-right-chevron"></i>Branded Events</a></span>
+                        <span class="menu-service menuactive" (click)="navigateTo('branded-events')"><a
+                                routerLink="/branded-events"><i class="flaticon-right-chevron"></i>Branded
+                                Events</a></span>
 
-                        <span class="menu-service "
-                            (click)="navigateTo('commercial-events')"><a
-                                routerLink="/commercial-events"><i
-                                    class="flaticon-right-chevron"></i>Commercial Events</a></span>
+                        <span class="menu-service " (click)="navigateTo('commercial-events')"><a
+                                routerLink="/commercial-events"><i class="flaticon-right-chevron"></i>Commercial
+                                Events</a></span>
 
-                        <span class="menu-service "
-                            (click)="navigateTo('birthday-events')"><a
-                                routerLink="/birthday-events"><i
-                                    class="flaticon-right-chevron"></i>Birthday Events</a></span>
+                        <span class="menu-service " (click)="navigateTo('birthday-events')"><a
+                                routerLink="/birthday-events"><i class="flaticon-right-chevron"></i>Birthday
+                                Events</a></span>
 
-                        <span class="menu-service "
-                            (click)="navigateTo('vip-events')"><a
-                                routerLink="/vip-events"><i
+                        <span class="menu-service " (click)="navigateTo('vip-events')"><a routerLink="/vip-events"><i
                                     class="flaticon-right-chevron"></i>VIP Events</a></span>
 
 
@@ -53,9 +47,7 @@
                             <p role="status" aria-live="polite" aria-atomic="true"></p>
                             <ul></ul>
                         </div>
-                        <form 
-                            class="wpcf7-form init" aria-label="Contact form" 
-                            data-status="init">
+                        <form class="wpcf7-form init" aria-label="Contact form" data-status="init">
                             <!-- <div style="display: none;">
                                 <input type="hidden" name="_wpcf7" value="809" />
                                 <input type="hidden" name="_wpcf7_version" value="5.7.4" />
@@ -117,8 +109,8 @@
                 <div class="col-lg-8">
                     <div class="bosluk333"></div>
                     <div class="galeri wow fadeInRight" data-wow-delay="0.7s">
-                        <img src="/assets/wp-content/uploads/2022/06/services-club-big-2.jpg"
-                            alt="" class="galeri__gorsel galeri__gorsel--8">
+                        <img src="assets/wp-content/uploads/2022/06/services-club-big-2.jpg" alt=""
+                            class="galeri__gorsel galeri__gorsel--8">
                     </div>
                     <div class="bosluk3"></div>
                     <h2 class="h2-baslik-anasayfa-ozel wow fade">Branded Events</h2>
@@ -130,7 +122,7 @@
                     <p></p>
                     <div class="bosluk333"></div>
                     <img class="divider" width="120" height="15" title="divider" alt="divider"
-                        src="/assets/wp-content/uploads/2022/05/divider.jpg">
+                        src="assets/wp-content/uploads/2022/05/divider.jpg">
                     <div class="bosluk333"></div>
                     <p class="paragraf wow fade">
                     </p>
