--- a/src/app/commercial-events/commercial-events.component.html
+++ b/src/app/commercial-events/commercial-events.component.html
@@ -1,8 +1,10 @@
-<header class="page-header" data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>Commercial Events</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i>Commercial Events
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i>
+            <a routerLink="/all-services" class="headerbreadcrumb">Services</a><i
+                class="flaticon-right-chevron"></i>Commercial Events
         </p>
     </div>
     <!-- end container -->
@@ -108,7 +110,7 @@
                 <div class="col-lg-8">
                     <div class="bosluk333"></div>
                     <div class="galeri wow fadeInRight" data-wow-delay="0.7s">
-                        <img src="/assets/wp-content/uploads/2022/06/services-club-big-3.jpg" alt=""
+                        <img src="assets/wp-content/uploads/2022/06/services-club-big-3.jpg" alt=""
                             class="galeri__gorsel galeri__gorsel--8">
                     </div>
                     <div class="bosluk3"></div>
@@ -121,7 +123,7 @@
                     <p></p>
                     <div class="bosluk333"></div>
                     <img class="divider" width="120" height="15" title="divider" alt="divider"
-                        src="/assets/wp-content/uploads/2022/05/divider.jpg">
+                        src="assets/wp-content/uploads/2022/05/divider.jpg">
                     <div class="bosluk333"></div>
                     <p class="paragraf wow fade">
                     </p>
