--- a/src/app/dance-party/dance-party.component.html
+++ b/src/app/dance-party/dance-party.component.html
@@ -4,6 +4,7 @@
         <h2>Dance Party</h2>
         <div class="bosluk3"></div>
         <p><a href="https://garantiwebtasarim.com/wordpress/nightbird/" class="headerbreadcrumb">Home</a> <i
+                class="flaticon-right-chevron"></i> <a routerLink="/events" class="headerbreadcrumb">Events</a> <i
                 class="flaticon-right-chevron"></i>Dance Party</p>
     </div>
     <!-- end container -->
@@ -142,7 +143,8 @@
 
                                                 <div class="clearfix">&nbsp;</div>
                                                 <a id="event-youtube-button" data-modal-id="wpem-youtube-modal-popup"
-                                                    class="wpem-theme-button wpem-modal-button" beWpemModalButton>Watch video</a>
+                                                    class="wpem-theme-button wpem-modal-button" beWpemModalButton>Watch
+                                                    video</a>
                                                 <div id="wpem-youtube-modal-popup" class="wpem-modal" role="dialog"
                                                     aria-labelledby="Watch video">
                                                     <div class="wpem-modal-content-wrapper">
@@ -152,8 +154,8 @@
                                                                 </h3>
                                                             </div>
                                                             <div class="wpem-modal-header-close"><a
-                                                                    href="javascript:void(0)" class="wpem-modal-close" beWpemModalClose
-                                                                    id="wpem-modal-close">x</a></div>
+                                                                    href="javascript:void(0)" class="wpem-modal-close"
+                                                                    beWpemModalClose id="wpem-modal-close">x</a></div>
                                                         </div>
                                                         <div class="wpem-modal-content">
                                                         </div>
@@ -171,23 +173,23 @@
                                             <div class="wpem-share-this-event">
                                                 <div class="wpem-event-share-lists">
                                                     <div class="wpem-social-icon wpem-facebook">
-                                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://garantiwebtasarim.com/wordpress/nightbird/event/dance-party/"
+                                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://bavandi.github.io/entertainment/event/dance-party/"
                                                             title="Share this page on Facebook">Facebook</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-twitter">
-                                                        <a href="https://twitter.com/share?text=twitter&url=https://garantiwebtasarim.com/wordpress/nightbird/event/dance-party/"
+                                                        <a href="https://twitter.com/share?text=twitter&url=https://bavandi.github.io/entertainment/event/dance-party/"
                                                             title="Share this page on Twitter">Twitter</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-linkedin">
-                                                        <a href="https://www.linkedin.com/sharing/share-offsite/?&url=https://garantiwebtasarim.com/wordpress/nightbird/event/dance-party/"
+                                                        <a href="https://www.linkedin.com/sharing/share-offsite/?&url=https://bavandi.github.io/entertainment/event/dance-party/"
                                                             title="Share this page on Linkedin">Linkedin</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-xing">
-                                                        <a href="https://www.xing.com/spi/shares/new?url=https://garantiwebtasarim.com/wordpress/nightbird/event/dance-party/"
+                                                        <a href="https://www.xing.com/spi/shares/new?url=https://bavandi.github.io/entertainment/event/dance-party/"
                                                             title="Share this page on Xing">Xing</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-pinterest">
-                                                        <a href="https://pinterest.com/pin/create/button/?url=https://garantiwebtasarim.com/wordpress/nightbird/event/dance-party/"
+                                                        <a href="https://pinterest.com/pin/create/button/?url=https://bavandi.github.io/entertainment/event/dance-party/"
                                                             title="Share this page on Pinterest">Pinterest</a>
                                                     </div>
                                                 </div>
@@ -233,7 +235,8 @@
 
                                                             <div class="wpem-col-md-9 wpem-col-sm-12">
                                                                 <div class="wpem-organizer-name wpem-heading-text">
-                                                                    <span>Emily Duke</span></div>
+                                                                    <span>Emily Duke</span>
+                                                                </div>
 
 
                                                                 <div class="wpem-organizer-short-info">Nightclub is an
@@ -302,7 +305,8 @@
 
                                                             <div class="wpem-col-md-9 wpem-col-sm-12">
                                                                 <div class="wpem-organizer-name wpem-heading-text">
-                                                                    <span>Robert Lee</span></div>
+                                                                    <span>Robert Lee</span>
+                                                                </div>
 
 
                                                                 <div class="wpem-organizer-short-info">Nightclub is an
