--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 
 
             <div class="swiper-slide">
-                <div class="slide-image" data-background="/assets/wp-content/uploads/2022/06/club-slider-2.jpg">
+                <div class="slide-image" data-background="assets/wp-content/uploads/2022/06/club-slider-2.jpg">
                 </div>
                 <div class="container">
                     <h1>Don't Miss The <br>
@@ -17,7 +17,7 @@
             </div>
 
             <div class="swiper-slide">
-                <div class="slide-image" data-background="/assets/wp-content/uploads/2022/06/club-slider-11.jpg">
+                <div class="slide-image" data-background="assets/wp-content/uploads/2022/06/club-slider-11.jpg">
                 </div>
                 <div class="container">
                     <h1> Enjoy The <br>
@@ -42,10 +42,10 @@
     <div class="tablo">
         <div class="tablo--1-ve-2">
             <div class="galeri1 wow zoomIn" data-wow-delay="0.5s">
-                <img class="imagerotate" src="/assets/wp-content/uploads/2022/06/circle-club-1.png" alt="">
+                <img class="imagerotate" src="assets/wp-content/uploads/2022/06/circle-club-1.png" alt="">
             </div>
             <div class="galeri wow slideInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
-                <img src="/assets/wp-content/uploads/2022/06/club-about-1.png" alt="Webone About"
+                <img src="assets/wp-content/uploads/2022/06/club-about-1.png" alt="Webone About"
                     class="galeri__gorsel galeri__gorsel--3 zimage">
             </div>
         </div>
@@ -59,7 +59,7 @@
                 prestigious venue. We organize special events for you to have an amazing night.</p>
             <div class="bosluk333"></div>
             <img class="divider" width="120" height="15" title="divider" alt="divider"
-                src="/assets/wp-content/uploads/2022/05/divider.jpg">
+                src="assets/wp-content/uploads/2022/05/divider.jpg">
             <div class="bosluk333"></div>
             <div class="row">
                 <div class="col-sm-2 wow  fadeInRight" data-wow-delay="0.7s">
@@ -109,7 +109,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.6s"
                                             (click)="navigateTo('corporate-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-1.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-1.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Corporate Events</h2>
@@ -127,7 +127,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.7s"
                                             (click)="navigateTo('branded-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-2.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-2.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Branded Events</h2>
@@ -145,7 +145,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.8s"
                                             (click)="navigateTo('commercial-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-3.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-3.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Commercial Events</h2>
@@ -162,13 +162,13 @@
                                 <div data-tab-title="Birthday Events" class="tab-content current wow fade">
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="0.9s"
-                                            onclick="window.location.href='https://garantiwebtasarim.com/wordpress/nightbird/birthday-events/'">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-4.jpg"
+                                            (click)="navigateTo('birthday-events')">
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-4.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>Birthday Events</h2>
                                                 <button
-                                                    onclick="window.location.href='https://garantiwebtasarim.com/wordpress/nightbird/birthday-events/'">View</button>
+                                                    (click)="navigateTo('birthday-events')">View</button>
                                             </div>
                                         </div>
                                     </div>
@@ -181,7 +181,7 @@
                                     <div class="cards">
                                         <div class="card wow zoomIn" data-wow-delay="1s"
                                             (click)="navigateTo('vip-events')">
-                                            <img src="/assets/wp-content/uploads/2022/06/services-club-5.jpg"
+                                            <img src="assets/wp-content/uploads/2022/06/services-club-5.jpg"
                                                 alt="Project">
                                             <div class="cardContent">
                                                 <h2>VIP Events</h2>
@@ -253,7 +253,7 @@
                                         class="wpem-event-action-url event-style-color night-club">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-1.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-1.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -325,7 +325,7 @@
                                         class="wpem-event-action-url event-style-color night-life">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-2.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-2.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -397,7 +397,7 @@
                                         class="wpem-event-action-url event-style-color night-dance">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-3.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-3.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -469,7 +469,7 @@
                                         class="wpem-event-action-url event-style-color night-club">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-4.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-4.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -541,7 +541,7 @@
                                         class="wpem-event-action-url event-style-color night-life">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-5.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-5.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -613,7 +613,7 @@
                                         class="wpem-event-action-url event-style-color night-club">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-6.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-6.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -685,7 +685,7 @@
                                         class="wpem-event-action-url event-style-color night-life">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-7.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-7.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -757,7 +757,7 @@
                                         class="wpem-event-action-url event-style-color night-club">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-8.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-8.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -829,7 +829,7 @@
                                         class="wpem-event-action-url event-style-color night-club">
                                         <div class="wpem-event-banner">
                                             <div class="wpem-event-banner-img"
-                                                style="background-image: url(/assets/wp-content/uploads/2022/06/event-club-9.jpg)">
+                                                style="background-image: url(assets/wp-content/uploads/2022/06/event-club-9.jpg)">
 
                                                 <!-- Hide in list View // Show in Box View -->
                                                 <div class="wpem-event-date">
@@ -907,85 +907,85 @@
         <div class="row">
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-2-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-2-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-2-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-2-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-10-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-10-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-10-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-10-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-9-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-9-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-9-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-9-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-8-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-8-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-8-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-8-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-7-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-7-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-7-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-7-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-5-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-5-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-5-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-5-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-6-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-6-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-6-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-6-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-4-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-4-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-4-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-4-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-3-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-3-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-3-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-3-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/event-club-1-1024x561.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/event-club-1-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/event-club-1-1024x561.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/event-club-1-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/club-slider-2-1024x576.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/club-slider-2-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/club-slider-2-1024x576.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/club-slider-2-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
             <div class="col-sm-2">
                 <div class="gallery">
-                    <a href="/assets/wp-content/uploads/2022/06/club-slider-9-1024x576.jpg" title="">
-                        <img src="/assets/wp-content/uploads/2022/06/club-slider-9-150x150.jpg" class="img-fluid">
+                    <a href="assets/wp-content/uploads/2022/06/club-slider-9-1024x576.jpg" title="">
+                        <img src="assets/wp-content/uploads/2022/06/club-slider-9-150x150.jpg" class="img-fluid">
                     </a>
                 </div>
             </div>
