--- a/src/app/whats-in-the-nightclub/whats-in-the-nightclub.component.html
+++ b/src/app/whats-in-the-nightclub/whats-in-the-nightclub.component.html
@@ -1,9 +1,10 @@
-<header class="page-header" data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>What&#8217;s in the nightclub?</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i
-                class="flaticon-right-chevron"></i>What&#8217;s in the nightclub?</p>
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i><a
+                routerLink="/blog" class="headerbreadcrumb">Blog</a><i class="flaticon-right-chevron"></i>What&#8217;s
+            in the nightclub?</p>
     </div>
     <!-- end container -->
 </header>
