--- a/src/app/birthday-party/birthday-party.component.html
+++ b/src/app/birthday-party/birthday-party.component.html
@@ -1,10 +1,10 @@
-<header class="page-header"
-    data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>Birthday Party</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i
-                class="flaticon-right-chevron"></i>Birthday Party</p>
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i> <a
+                routerLink="/events" class="headerbreadcrumb">Events</a> <i class="flaticon-right-chevron"></i>Birthday
+            Party</p>
     </div>
     <!-- end container -->
 </header>
@@ -26,7 +26,7 @@
                                         <div class="wpem-single-event-slider-wrapper">
                                             <div class="wpem-single-event-slider">
                                                 <div class="wpem-slider-items">
-                                                    <img src="/assets/wp-content/uploads/2022/06/event-club-6.jpg"
+                                                    <img src="assets/wp-content/uploads/2022/06/event-club-6.jpg"
                                                         alt="Birthday Party" />
                                                 </div>
                                             </div>
@@ -48,10 +48,8 @@
 
                                                 <div class="wpem-event-organizer">
                                                     <div class="wpem-event-organizer-name">
-                                                        by <a
-                                                            routerLink="/event-organizer/adam-brown">Adam
-                                                            Brown</a>, <a
-                                                            routerLink="/event-organizer/lizy-doe">Lizy
+                                                        by <a routerLink="/event-organizer/adam-brown">Adam
+                                                            Brown</a>, <a routerLink="/event-organizer/lizy-doe">Lizy
                                                             Doe</a> </div>
                                                 </div>
 
@@ -142,7 +140,8 @@
 
                                                 <div class="clearfix">&nbsp;</div>
                                                 <a id="event-youtube-button" data-modal-id="wpem-youtube-modal-popup"
-                                                    class="wpem-theme-button wpem-modal-button" beWpemModalButton>Watch video</a>
+                                                    class="wpem-theme-button wpem-modal-button" beWpemModalButton>Watch
+                                                    video</a>
                                                 <div id="wpem-youtube-modal-popup" class="wpem-modal" role="dialog"
                                                     aria-labelledby="Watch video">
                                                     <div class="wpem-modal-content-wrapper">
@@ -152,8 +151,8 @@
                                                                 </h3>
                                                             </div>
                                                             <div class="wpem-modal-header-close"><a
-                                                                    href="javascript:void(0)" class="wpem-modal-close" beWpemModalClose
-                                                                    id="wpem-modal-close">x</a></div>
+                                                                    href="javascript:void(0)" class="wpem-modal-close"
+                                                                    beWpemModalClose id="wpem-modal-close">x</a></div>
                                                         </div>
                                                         <div class="wpem-modal-content">
                                                         </div>
@@ -171,23 +170,23 @@
                                             <div class="wpem-share-this-event">
                                                 <div class="wpem-event-share-lists">
                                                     <div class="wpem-social-icon wpem-facebook">
-                                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://garantiwebtasarim.com/wordpress/nightbird/event/birthday-party/"
+                                                        <a href="https://www.facebook.com/sharer/sharer.php?u=https://bavandi.github.io/entertainment/event/birthday-party/"
                                                             title="Share this page on Facebook">Facebook</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-twitter">
-                                                        <a href="https://twitter.com/share?text=twitter&url=https://garantiwebtasarim.com/wordpress/nightbird/event/birthday-party/"
+                                                        <a href="https://twitter.com/share?text=twitter&url=https://bavandi.github.io/entertainment/event/birthday-party/"
                                                             title="Share this page on Twitter">Twitter</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-linkedin">
-                                                        <a href="https://www.linkedin.com/sharing/share-offsite/?&url=https://garantiwebtasarim.com/wordpress/nightbird/event/birthday-party/"
+                                                        <a href="https://www.linkedin.com/sharing/share-offsite/?&url=https://bavandi.github.io/entertainment/event/birthday-party/"
                                                             title="Share this page on Linkedin">Linkedin</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-xing">
-                                                        <a href="https://www.xing.com/spi/shares/new?url=https://garantiwebtasarim.com/wordpress/nightbird/event/birthday-party/"
+                                                        <a href="https://www.xing.com/spi/shares/new?url=https://bavandi.github.io/entertainment/event/birthday-party/"
                                                             title="Share this page on Xing">Xing</a>
                                                     </div>
                                                     <div class="wpem-social-icon wpem-pinterest">
-                                                        <a href="https://pinterest.com/pin/create/button/?url=https://garantiwebtasarim.com/wordpress/nightbird/event/birthday-party/"
+                                                        <a href="https://pinterest.com/pin/create/button/?url=https://bavandi.github.io/entertainment/event/birthday-party/"
                                                             title="Share this page on Pinterest">Pinterest</a>
                                                     </div>
                                                 </div>
@@ -226,7 +225,7 @@
                                                                 <div class="wpem-organizer-logo-wrapper">
                                                                     <div class="wpem-organizer-logo"><a><img
                                                                                 class="organizer_logo"
-                                                                                src="/assets/wp-content/uploads/2022/06/organizator-club-4.jpg"
+                                                                                src="assets/wp-content/uploads/2022/06/organizator-club-4.jpg"
                                                                                 alt="Adam Brown" /></a></div>
                                                                 </div>
                                                             </div>
@@ -296,7 +295,7 @@
                                                                 <div class="wpem-organizer-logo-wrapper">
                                                                     <div class="wpem-organizer-logo"><a><img
                                                                                 class="organizer_logo"
-                                                                                src="/assets/wp-content/uploads/2022/06/organizator-club-2.jpg"
+                                                                                src="assets/wp-content/uploads/2022/06/organizator-club-2.jpg"
                                                                                 alt="Lizy Doe" /></a></div>
                                                                 </div>
                                                             </div>
