--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<header class="page-header" data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>Contact</h2>
         <div class="bosluk3"></div>
@@ -10,7 +10,8 @@
 <section class="iletisim-icon-alani">
     <div class="tablo">
         <div class="tablo--1-ve-3 wow fadeInLeft" data-wow-delay="0.5s">
-            <div class="ozellik-kutu-iletisim" onclick="location.href='#';" style="cursor:pointer;" data-tilt>
+            <div class="ozellik-kutu-iletisim" onclick="location.href='tel:+123456789';" style="cursor:pointer;"
+                data-tilt>
                 <div class="iconsv"><i class="flaticon-call"></i></div>
                 <h3 class="baslik-4 h-yazi-margin-kucuk-2">Customer service</h3>
                 <p class="ozellik-kutu-iletisim--yazi">
@@ -18,7 +19,8 @@
             </div>
         </div>
         <div class="tablo--1-ve-3 wow fadeInLeft" data-wow-delay="0.5s">
-            <div class="ozellik-kutu-iletisim" onclick="location.href='#';" style="cursor:pointer;" data-tilt>
+            <div class="ozellik-kutu-iletisim" onclick="location.href='mailto:info@bavandi.com';"
+                style="cursor:pointer;" data-tilt>
                 <div class="iconsv"><i class="flaticon-email"></i></div>
                 <h3 class="baslik-4 h-yazi-margin-kucuk-2">Mail Address</h3>
                 <p class="ozellik-kutu-iletisim--yazi">
@@ -26,11 +28,11 @@
             </div>
         </div>
         <div class="tablo--1-ve-3 wow fadeInRight" data-wow-delay="0.5s">
-            <div class="ozellik-kutu-iletisim" onclick="location.href='#';" style="cursor:pointer;" data-tilt>
+            <div class="ozellik-kutu-iletisim" (click)="redirectToMaps()" style="cursor:pointer;" data-tilt>
                 <div class="iconsv"><i class="flaticon-location"></i></div>
                 <h3 class="baslik-4 h-yazi-margin-kucuk-2">Office</h3>
                 <p class="ozellik-kutu-iletisim--yazi">
-                    Yeşilpınar Mh. Tepe Sk. Eyüp İstanbul </p>
+                    Majengo Central, Malindi, Kenya </p>
             </div>
         </div>
 
@@ -113,5 +115,5 @@
 
 </section>
 <p><iframe loading="lazy" style="border: 0;"
-    src="https://maps.google.com/maps?hl=en&amp;q=Majengo,%20Off%20Ganda%20Road,%20Malindi%2080200%20Kenya+(Dhome%20Bar%20&amp;%20Restaurant)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+        src="https://maps.google.com/maps?hl=en&amp;q=Majengo,%20Off%20Ganda%20Road,%20Malindi%2080200%20Kenya+(Dhome%20Bar%20&amp;%20Restaurant)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
         width="100%" height="450px" allowfullscreen="allowfullscreen"></iframe></p>
