--- a/src/app/corporate-events/corporate-events.component.html
+++ b/src/app/corporate-events/corporate-events.component.html
@@ -1,8 +1,10 @@
-<header class="page-header" data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>Corporate Events</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i>Corporate Events
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i>
+            <a routerLink="/all-services" class="headerbreadcrumb">Services</a><i class="flaticon-right-chevron"></i>Corporate
+            Events
         </p>
     </div>
     <!-- end container -->
@@ -46,8 +48,7 @@
                             <p role="status" aria-live="polite" aria-atomic="true"></p>
                             <ul></ul>
                         </div>
-                        <form  class="wpcf7-form init" aria-label="Contact form" 
-                            data-status="init">
+                        <form class="wpcf7-form init" aria-label="Contact form" data-status="init">
                             <!-- <div style="display: none;">
                                 <input type="hidden" name="_wpcf7" value="809" />
                                 <input type="hidden" name="_wpcf7_version" value="5.7.4" />
@@ -109,7 +110,7 @@
                 <div class="col-lg-8">
                     <div class="bosluk333"></div>
                     <div class="galeri wow fadeInRight" data-wow-delay="0.7s">
-                        <img src="/assets/wp-content/uploads/2022/06/services-club-big-1.jpg" alt=""
+                        <img src="assets/wp-content/uploads/2022/06/services-club-big-1.jpg" alt=""
                             class="galeri__gorsel galeri__gorsel--8">
                     </div>
                     <div class="bosluk3"></div>
@@ -122,7 +123,7 @@
                     <p> </p>
                     <div class="bosluk333"></div>
                     <img class="divider" width="120" height="15" title="divider" alt="divider"
-                        src="/assets/wp-content/uploads/2022/05/divider.jpg">
+                        src="assets/wp-content/uploads/2022/05/divider.jpg">
                     <div class="bosluk333"></div>
                     <p class="paragraf wow fade">
                     </p>
