--- a/src/app/what-does-disco-bar-mean/what-does-disco-bar-mean.component.html
+++ b/src/app/what-does-disco-bar-mean/what-does-disco-bar-mean.component.html
@@ -1,10 +1,10 @@
-<header class="page-header"
-    data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>What does disco bar mean?</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i
-                class="flaticon-right-chevron"></i>What does disco bar mean?</p>
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i><a
+                routerLink="/blog" class="headerbreadcrumb">Blog</a><i class="flaticon-right-chevron"></i>What does
+            disco bar mean?</p>
     </div>
     <!-- end container -->
 </header>
