--- a/src/app/what-exactly-does-a-dj-do/what-exactly-does-a-dj-do.component.html
+++ b/src/app/what-exactly-does-a-dj-do/what-exactly-does-a-dj-do.component.html
@@ -1,10 +1,10 @@
-<header class="page-header"
-    data-background="/assets/wp-content/uploads/2022/06/pageheader-club.jpg">
+<header class="page-header" data-background="assets/wp-content/uploads/2022/06/pageheader-club.jpg">
     <div class="container">
         <h2>What exactly does a DJ do?</h2>
         <div class="bosluk3"></div>
-        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i
-                class="flaticon-right-chevron"></i>What exactly does a DJ do?</p>
+        <p><a routerLink="/" class="headerbreadcrumb">Home</a> <i class="flaticon-right-chevron"></i><a
+                routerLink="/blog" class="headerbreadcrumb">Blog</a><i class="flaticon-right-chevron"></i>What exactly
+            does a DJ do?</p>
     </div>
     <!-- end container -->
 </header>
